# opencti

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  Dockerfile.patch  Makefile  docker-compose.yml  patch_ee.sh
.docs/: IOC_FLOW_EXPLANATION.md  OpenCTI_BA.md  OpenCTI_Core_Infrastructure.md  OpenCTI_connectors.md  QA.md  connectors.md  core-infrastructure.md  plan.md  setup-with-ee-guide.md
.docs/data/: nvdcve-2.0-2025-sample.json
.docs/functional-requirements/: FR-01__Design.md  FR-01__Requirement_and_QA.md  FR-02__Design.md  FR-02__Requirement_and_QA.md
.docs/schema/: elastic-schema.md  elastic__opencti_stix_core_relationships.json  (+1 more)
client-python/: requirements.txt  setup.cfg
opencti-deploy-offline/: .gitignore  Dockerfile  Install_Client_Guide.md  Install_Guide.md  Makefile  README.md  README_Guide.md  Troubleshooting.md  docker-compose.yml  v2_clean_build.sh  v2_pack_cti.sh  v2_pack_opencti.sh  v2_pack_opencti_app.sh  v2_pack_opencti_infra.sh  v2_ti_uninstall_all.sh  v2_uninstall_opencti_app.sh  v2_uninstall_opencti_infra.sh  v2_unpack_cti.sh  v2_unpack_opencti.sh  v2_unpack_opencti_app.sh  v2_unpack_opencti_infra.sh
opencti-platform/: Dockerfile
opencti-platform/opencti-tauri/src-tauri/: Cargo.toml  tauri.conf.json
opencti-platform/opencti-tauri/src-tauri/src/: main.rs  main.rs.backup  proxy.rs
tools/: .gitignore
v2-ai-llm/: .gitignore  Makefile  README.md  docker-compose.yml  run-vllm.sh  stop-vllm.sh
v2-connectors/: .env.sample  .gitignore  ISSUE.md  Makefile  docker-compose-connector.yml  prepare.sh
(+340 files in other folders)
